--- a/college/websites/index.html
+++ b/college/websites/index.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>index</title>
 </head>
 <body>
-    <h1>Hello World</h1>
-    
+    <h1 pixel>Hello World</h1>
+    <hr>
+    <img src="img/axalote.jpg" alt="image.axalote">
+    <hr>
 </body>
 </html>
