--- a/college/websites/index.html
+++ b/college/websites/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
     <title>index</title>
 </head>
 <body>
     <h1 pixel>Hello World</h1>
     <hr>
-    <img src="img/axalote.jpg" alt="image.axalote">
+    <div><img src="img/axalote.jpg" alt="image.axalote"></div>
     <hr>
 </body>
 </html>
