criei um arquivo js

--- a/college/websites/index.html
+++ b/college/websites/index.html
@@ -11,6 +11,15 @@
     <hr>
     <div><img src="img/axalote.jpg" alt="image.axalote"></div>
     <hr>
-
+    <p>
+        <button id='b1'>
+          Botão
+        </button>
+        </p>
+        <p>
+        <button id='b2'>
+          Desabilitar botão
+        </button>
+    </p>
 </body>
 </html>
